# procastro

./: .coveragerc  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
astro/: __init__.py  astro.py
astro/tests/: test_astro.py  transits.txt
combine/: __init__.py  combine.py
core/: __init__.py  astro.py  astrodir.py  astrofile.py  io.py  io_dir.py  io_file.py  misc_arr.py  misc_examine.py  misc_general.py  misc_graph.py  misc_lists.py  misc_math.py  misc_process.py
core/tests/: fit_factory.py  test_astrodir.py  test_astrofile.py
dataproc/: __init__.py
dataproc/astro/: astro.py  moon.py
dataproc/core/: __init__.py  astrocommon.py  astrodir.py  astrofile.py  interactive_graphics.py  io.py  io_dir.py  misc_arr.py  misc_examine.py  misc_graph.py  misc_lists.py  misc_math.py  misc_process.py
dataproc/deprecated/: misc_process.py
dataproc/misc/: __init__.py  logo_pato.py
dataproc/obsrv/: AvalaibleAt.py  __init__.py  available_at.py  nightly.py  obscalc.py  observatories.coo  obsrv.py
dataproc/photography/: __init__.py  orchestrator.py  plotting.py  rawinfo.py
dataproc/test/: fit_factory.py
dataproc/tests/: available_test.py  imshowz_interactive_test.py  obsrv_test.py  orch_test.py  test_photometry.py
dataproc/timeseries/: __init__.py  img_scale.py  photometry.py  timeseries.py
db/: uuid
deprecated/: misc_examine.py
deprecated/combine/: combine.py
docs/: conf.py  index.rst  quickstart.rst  requirements.txt
docs/source/: api.rst  dataproc.astro.rst  dataproc.core.rst  dataproc.obsrv.rst  dataproc.rst  dataproc.timeseries.rst  modules.rst  procastro.astro.rst  procastro.astro.tests.rst  procastro.core.rst  procastro.core.tests.rst  procastro.obsrv.rst  procastro.photography.rst  procastro.rst  procastro.tests.rst  procastro.timeseries.rst  quickstart.rst
execs/: imacs.py
fadra/doc/: conf.py  make.bat  user.rst
fran/: CPUmath.py  __init__.py  ado.py  commands  foo.py  reduction.py  sharedObject.py  subject.py  test2.py  window.py
fran/Observer/: ObservedWindow.py  Observer.py  Synchronization.py  __init__.py
fran/defaultfuncs/: __init__.py  bar.py  foo.py
fran/doc/: Makefile  sharedObject.rst
obsrv/: __init__.py  nightly.py  nightly_old.py  obscalc.py  observatories.coo  obsold.py  obsplot.py  obsrv.py  transits.txt
obsrv/deprecated/: nightly_mine.py
obsrv/tests/: test_obscalc.py  transits.txt
procastro/: __init__.py  exceptions.py  interfaces.py  logging.py  statics.py
procastro/_bases/: astrofile.py  calib.py
procastro/api_provider/: __init__.py  api_exceptions.py  api_service.py
procastro/astro/: __init__.py  astro.py  coordinates.py  exoplanet.py  ifu.py  moon.py  projection.py  projections.py  solar_system.py  solar_systemv2.py  spectra.py
procastro/astrodir/: __init__.py  astrodir.py
procastro/astrofile/: __init__.py  astrofile.py  meta.py  mosaic.py  multi.py  multi_files.py  spec.py  static_guess.py  static_identify.py  static_read.py  static_write.py  timeseries.py
procastro/axis/: __init__.py  axes.py  axis.py  channel.py  data.py  reference.py  spatial_x.py  spatial_y.py  spectral_pix.py  spectral_wav.py  temporal.py
procastro/cache/: cache.py  cachev2.py  utils.py
procastro/calib/: __init__.py  base.py  calib.py  raw2d.py  table_op.py  wav_mosaic.py  wav_solution.py  wav_solution_single.py  wavsol.py
procastro/config/: __init__.py  definitions.py  general.py  logging.py
procastro/core/: __init__.py  astrocalib.py  astrodir.py  astrofile.py  cache.py  interactive_graphics.py  internal_functions.py  logging.py  misc_arr.py  misc_general.py  misc_graph.py  misc_math.py  statics.py
procastro/data/: astrodata.py  utils.py
procastro/defaults/: USGSmap.toml  exoplanet.toml  interactive.cfg  interactive.toml  logging.toml  obsrv.toml
procastro/deprecated/: astrodir.py  astrofile.py
procastro/graphics/: core.py
procastro/interfaces/: __init__.py  astrocalib.py  (+3 more)
scripts/: find_phase.py  run_body_map.py  run_nightly.py  run_obsrv.py  tests.ipynb
source/: conf.py  index.rst  modules.rst  procastro.astro.rst  procastro.core.rst  procastro.obsrv.deprecated.rst  procastro.obsrv.rst  procastro.obsrv.tests.rst  procastro.timeseries.tests.rst
test/: fit_factory.py  runme.py  test_photometry.py
timeseries/: Photometry.py  TimeSerie.py  __init__.py  astrocalc.py  astrointerface.py  astroplot.py  photometry.cl  photometry.py  stamp_photometry.py  timeserie.py  timeseries.py
(+262 files in other folders)
