[project]
name = "procastro"
version = "0.0.0"
description = "Framework to process astronomical data files"
authors = [{ name = "Patricio Rojo", email = "pato@das.uchile.cl" }]
requires-python = "~=3.12"
readme = "README.md"
license = "BSD-3-Clause"
dependencies = [
    "asdf-astropy>=0.4.0,<0.5",
    "astropy>=6,<7",
    "astroquery>=0.4.6,<0.5",
    "ExifRead>=3.0.0,<4",
    "matplotlib>=3.5.3,<4",
    "numpy>=1.23.2,<2",
    "pandas>=2,<3",
    "pyvo~=1.3",
    "scipy>=1.9.1,<2",
    "tomli>=2.0.1,<3",
    "tomli_w>=1.0.0,<2",
    "cartopy>=0.23.0,<0.24",
    "lxml>=5.2.1,<6",
    "platformdirs>=4.3.7,<5",
    "toml>=0.10.2,<0.11",
    "diskcache>=5.6.3,<6",
    "tqdm>=4.67.1,<5",
    "imageio>=2.37.0,<3",
    "requests>=2.32.3,<3",
]

[project.optional-dependencies]
docs = []

[project.urls]
Repository = "https://github.com/duckrojo/procastro"
Documentation = "https://procastro.readthedocs.io/en/latest/"

[dependency-groups]
dev = [
    "poetry-dynamic-versioning>=1,<2",
    "ipython>=8,<9",
    "ipykernel>=6.29.5,<7",
]
test = ["pytest>=7.3.1,<8"]
docs = [
    "Sphinx==4.2.0",
    "sphinx-rtd-theme==1.0.0",
    "sphinxcontrib-napoleon==0.7",
]

[tool.poetry-dynamic-versioning]
enable = true

[tool.uv]
default-groups = [
    "dev",
    "test",
    "docs",
]

[tool.poetry-dynamic-versioning.substitution]

[tool.hatch.build.targets.sdist]
exclude = ["execs"]

[tool.hatch.build.targets.wheel]
exclude = ["execs"]

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
